# oath

./: .gitignore  Cargo.toml  README.md  fun.r  rustfmt.toml
compiler/oath/: Cargo.toml
compiler/oath/src/: lib.rs  lib_.rs  mod_.rs
compiler/oath_ast/: Cargo.toml
compiler/oath_ast/proc_macros/: Cargo.toml
compiler/oath_ast/src/: attr.rs  block.rs  bounds.rs  braces_or_semi.rs  contract.rs  error.rs  expr.rs  fn_.rs  func.rs  generic_args.rs  generic_params.rs  impl_.rs  item.rs  lib.rs  mod_.rs  mod_content.rs  mod_item.rs  param.rs  path.rs  pub_.rs  spec.rs  stmt.rs  struct_.rs  sys.rs  trait_.rs  type_.rs  use_.rs  var_name.rs  vis.rs
compiler/oath_context/: Cargo.toml
compiler/oath_context/src/: diagnostics.rs  highlighter.rs  interner.rs  lib.rs
compiler/oath_name_res/: Cargo.toml
compiler/oath_name_res/src/: item.rs  item_attrib.rs  lib.rs  mod_.rs  name.rs  name_context.rs  namespace.rs  scope.rs  struct_.rs  traits.rs
compiler/oath_name_res/src/resolved_types/: expr.rs  generic_args.rs  mod.rs  mod_content.rs
compiler/oath_name_res/src/ty/: mod.rs
compiler/oath_parse_context/: Cargo.toml
compiler/oath_parse_context/src/: lib.rs
compiler/oath_parser/: Cargo.toml
compiler/oath_parser/derive_macro_utils/: Cargo.toml
compiler/oath_parser/derive_macro_utils/src/: impl_desc.rs  impl_detect.rs  impl_option_parse.rs  impl_parse.rs  impl_peek.rs  impl_try_parse.rs  lib.rs
compiler/oath_parser/proc_macros/: Cargo.toml
compiler/oath_parser/proc_macros/src/: derive_option_detect.rs  derive_option_parse.rs  derive_parse.rs  derive_trait.rs  impl_desc.rs  impl_detect.rs  impl_option_detect.rs  impl_option_parse.rs  impl_parse.rs  impl_parse_error.rs  impl_util.rs  lib.rs  parse_fields.rs  parse_variants.rs  util_fields.rs
compiler/oath_parser/src/: box_impl.rs  case.rs  endless.rs  followed.rs  in_delimeters.rs  into_parser.rs  into_parser_ext.rs  lib.rs  option_detect.rs  option_parse.rs  parse_box.rs  parse_garbage.rs  parse_tokens.rs  parse_traits.rs  parse_vec.rs  parser.rs  repeated.rs  seperated.rs  token_impl.rs  try_parse.rs  unmatched.rs
compiler/oath_parser/src/parse_traits/: mod.rs  option_detect.rs  option_parse.rs  parse.rs  token_impl.rs  try_parse.rs
compiler/oath_parser/src/parse_types/: mod.rs  sep.rs
compiler/oath_parser/src/parser/: into_parser.rs  mod.rs
compiler/oath_parser/src/parser_types/: angles.rs  box_.rs  discard.rs  mod.rs  repeated.rs  seperated.rs  trailing.rs  try_.rs
compiler/oath_parser/src/parsing_types/: fol.rs  fol_endless.rs  garbage.rs  in_delimeters.rs  mod.rs  rep.rs  rep_endless.rs  sep.rs  sep_end.rs  sep_endless.rs  trl.rs  trl_endless.rs  unmatched.rs
compiler/oath_parser/src/token_impl/: desc.rs  mod.rs  peek.rs  peek_ok.rs  try_parse.rs
compiler/oath_query/: Cargo.toml
compiler/oath_query/src/: expr.rs  item.rs  lib.rs  lib_.rs  mod_.rs
compiler/oath_resolution/: Cargo.toml
compiler/oath_resolution/src/: lib.rs
compiler/oath_tokenizer/: Cargo.toml  build.rs
compiler/oath_tokenizer/keywords_puncts/: Cargo.toml
compiler/oath_tokenizer/keywords_puncts/src/: lib.rs
compiler/oath_tokenizer/proc_macros/: Cargo.toml
compiler/oath_tokenizer/proc_macros/src/: lib.rs
compiler/oath_tokenizer/src/: from_regex_str.rs  lib.rs  parser_context.rs  raw_tokenizer.rs  tokenize.rs  tokenize_ext.rs  tokenizer.rs
compiler/oath_tokenizer/src/lazy_types/: file.rs  mod.rs  token_tree.rs
compiler/oath_tokenizer/src/owned_types/: float_literal.rs  group.rs  ident.rs  int_literal.rs  keyword.rs  literal.rs  mod.rs  (+1 more)
compiler/oath_tokenizer/token_set/: Cargo.toml
compiler/oath_tokenizer_macros/: Cargo.toml
compiler/oath_tokenizer_macros/src/: lib.rs
compiler/oath_tokens/: Cargo.toml  build.rs
compiler/oath_tokens/definitions/: Cargo.toml
compiler/oath_tokens/proc_macros/: Cargo.toml
compiler/oath_tokens/src/: char_literal.rs  delimiters.rs  file.rs  float_literal.rs  group.rs  ident.rs  int_literal.rs  keyword.rs  lib.rs  literal.rs  punct.rs  str_literal.rs  token_tree.rs  try_.rs
compiler/oathc/: Cargo.toml
compiler/oathc/src/: lib.rs
compiler/oathc_ast/: Cargo.toml
compiler/oathc_ast/src/: attr.rs  block.rs  contract.rs  control_flow.rs  expr.rs  generics.rs  item.rs  lib.rs  list.rs  ops.rs  param.rs  type_.rs
compiler/oathc_diagnostics/: Cargo.toml
compiler/oathc_diagnostics/src/: diagnostic.rs  diagnostics.rs  lib.rs  try_.rs
compiler/oathc_fmt/: Cargo.toml
compiler/oathc_fmt/proc_macros/: Cargo.toml
compiler/oathc_fmt/src/: config.rs  ext.rs  format.rs  lib.rs  to_tree.rs  tree.rs
compiler/oathc_parser/: Cargo.toml
compiler/oathc_parser/proc_macros/: Cargo.toml
compiler/oathc_parser/src/: lib.rs  parse_traits.rs
compiler/oathc_res/: Cargo.toml
compiler/oathc_res/src/: expr.rs  item.rs  lib.rs  mod_.rs  namespace.rs  res_type.rs
compiler/oathc_tokenizer/: Cargo.toml
compiler/oathc_tokenizer/src/: from_regex_str.rs  lib.rs  raw_tokenizer.rs  tokenize_ext.rs  tokenizer.rs
compiler/oathc_tokens/: Cargo.toml  build.rs
compiler/oathc_tokens/definitions/: Cargo.toml
compiler/oathc_tokens/proc_macros/: Cargo.toml
compiler/oathc_tokens/src/: char_literal.rs  delimiters.rs  float_literal.rs  ident.rs  int_literal.rs  keyword.rs  lib.rs  literal.rs  punct.rs  str_literal.rs
editor-server/: Cargo.toml
editor-server/src/: backend.rs  highlighting.rs  main.rs  span.rs  span_range.rs  watcher.rs
oathc/: Cargo.toml  build.rs
oathc/proc_macros/: Cargo.toml
oathc/proc_macros/src/: lib.rs
oathc/src/: lib.rs
oathc/src/diagnostics/: diagnostic.rs  diagnostics.rs  mod.rs
oathc/src/highlighting/: highlight.rs  mod.rs
oathc/src/interner/: interned.rs  interned_display.rs  mod.rs
oathc/src/span/: mod.rs  option_spanned.rs  span.rs  spanned.rs
oathc/src/tokenizer/: mod.rs  raw_tokenizer.rs  tokenize_ext.rs  tokenizer.rs
oathc/src/tokens/: char_literal.rs  delimiters.rs  float_literal.rs  ident.rs  int_literal.rs  keyword.rs  literal.rs  mod.rs  punct.rs
oathc/token_definitions/: Cargo.toml
oathc/token_definitions/src/: lib.rs
(+233 files in other folders)
