[workspace]

members = [
    "compiler/oath_ast",
    "compiler/oath_context", "compiler/oath_name_res",
    "compiler/oath_parser",
    "compiler/oath_parser/proc_macros",
    "compiler/oath_src",
    "compiler/oath_tokenizer",
    "compiler/oath_tokenizer/proc_macros",
    "compiler/oath_tokenizer/token_set",
    "editor-server",
]

panic = "unwind"
