[package]
edition = "2021"
name    = "editor-server"
version = "0.1.0"

[dependencies]
oath_ast          = { path = "../compiler/oath_ast" }
oath_context      = { path = "../compiler/oath_context" }
oath_highlighting = { path = "../compiler/oath_highlighting" }
oath_interner     = { path = "../compiler/oath_interner" }
oath_nameres      = { path = "../compiler/oath_nameres" }
oath_src          = { path = "../compiler/oath_src" }
oath_tokenizer    = { path = "../compiler/oath_tokenizer" }
oath_tokens       = { path = "../compiler/oath_tokens" }
tokio             = { version = "1.42.0", features = [ "full" ] }
tower-lsp         = "0.20.0"
