[package]
edition = "2024"
name    = "oathc"
version = "0.1.0"

[dependencies]
dashmap                 = "6.1.0"
derive-new              = "0.7.0"
derive_more             = { version = "2.0.1", features = [ "full" ] }
logos                   = "0.15.0"
nonempty                = "0.11.0"
oathc_proc_macros       = { path = "proc_macros" }
oathc_token_definitions = { path = "token_definitions" }
string-interner         = "0.18.0"

[build-dependencies]
oathc_token_definitions = { path = "token_definitions" }
