[package]
edition = "2021"
name    = "oath_ast"
version = "0.1.0"

[dependencies]
derive_more        = { version = "2.0.1", features = [ "full" ] }
nonempty           = "0.11.0"
oath_diagnostics   = { path = "../oath_diagnostics" }
oath_highlighting  = { path = "../oath_highlighting" }
oath_parse_context = { path = "../oath_parse_context" }
oath_parser        = { path = "../oath_parser" }
oath_src           = { path = "../oath_src" }
oath_tokenizer     = { path = "../oath_tokenizer" }
oath_tokens        = { path = "../oath_tokens" }
