[package]
edition = "2024"
name    = "oath_name_res"
version = "0.1.0"

[dependencies]
oath_ast         = { path = "../oath_ast" }
oath_context     = { path = "../oath_context" }
oath_diagnostics = { path = "../oath_diagnostics" }
oath_parser      = { path = "../oath_parser" }
oath_src         = { path = "../oath_src" }
oath_tokenizer   = { path = "../oath_tokenizer" }
oath_tokens      = { path = "../oath_tokens" }
