[package]
edition = "2021"
name    = "oath_parser"
version = "0.1.0"

[dependencies]
oath_diagnostics        = { path = "../oath_diagnostics" }
oath_parser_proc_macros = { path = "proc_macros" }
oath_src                = { path = "../oath_src" }
oath_tokenizer          = { path = "../oath_tokenizer" }
