[package]
edition = "2024"
name    = "oath_query"
version = "0.1.0"

[dependencies]
oath_ast          = { path = "../oath_ast" }
oath_diagnostics  = { path = "../oath_diagnostics" }
oath_highlighting = { path = "../oath_highlighting" }
oath_src          = { path = "../oath_src" }
oath_tokens       = { path = "../oath_tokens" }
