[package]
edition = "2024"
name    = "oath_name_res"
version = "0.1.0"

[dependencies]
derive_more       = { version = "2.0.1", features = [ "full" ] }
nonempty          = "0.11.0"
oath_ast          = { path = "../oath_ast" }
oath_context      = { path = "../oath_context" }
oath_diagnostics  = { path = "../oath_diagnostics" }
oath_highlighting = { path = "../oath_highlighting" }
oath_interner     = { path = "../oath_interner" }
oath_parser       = { path = "../oath_parser" }
oath_src          = { path = "../oath_src" }
oath_tokenizer    = { path = "../oath_tokenizer" }
oath_tokens       = { path = "../oath_tokens" }
splat_attribs     = "1.0.0"
