[package]
edition = "2021"
name    = "oath_tokenizer"
version = "0.1.0"

[dependencies]
logos              = "0.15.0"
oath_diagnostics   = { path = "../oath_diagnostics" }
oath_parse_context = { path = "../oath_parse_context" }
oath_src           = { path = "../oath_src" }
oath_tokens        = { path = "../oath_tokens" }
