[package]
edition = "2021"
name    = "oath_tokenizer_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse            = "0.2.0"
oath_keywords_puncts        = { path = "../oath_keywords_puncts" }
oath_keywords_puncts_macros = { path = "../oath_keywords_puncts_macros" }
proc-macro2                 = "1.0.93"
quote                       = "1.0.38"
syn                         = "2.0.96"
