[package]
edition = "2024"
name    = "oath_tokens"
version = "0.1.0"

[dependencies]
derive-new              = "0.7.0"
derive_more             = { version = "2.0.1", features = [ "full" ] }
oath_highlighting       = { path = "../oath_highlighting" }
oath_interner           = { path = "../oath_interner" }
oath_src                = { path = "../oath_src" }
oath_token_definitions  = { path = "definitions" }
oath_tokens_proc_macros = { path = "proc_macros" }

[build-dependencies]
oath_token_definitions = { path = "definitions" }
