[package]
edition = "2024"
name    = "oathc_diagnostics"
version = "0.1.0"

[dependencies]
dashmap            = "6.1.0"
derive-new         = "0.7.0"
derive_more        = { version = "2.0.1", features = [ "full" ] }
oathc_highlighting = { path = "../oathc_highlighting" }
oathc_interner     = { path = "../oathc_interner" }
oathc_span         = { path = "../oathc_span" }
