[package]
edition = "2024"
name    = "oathc_proc_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse        = "0.2.0"
oathc_token_definitions = { path = "../token_definitions" }
proc-macro2             = "1.0.93"
quote                   = "1.0.38"
syn                     = "2.0.96"
