[package]
edition = "2021"
name    = "oath_tokenizer_proc_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse     = "0.2.0"
oath_keywords_puncts = { path = "../keywords_puncts" }
proc-macro2          = "1.0.93"
quote                = "1.0.38"
syn                  = "2.0.96"
